@@ -1,3 +1,10 @@
+webdrivermanager (1.3.1)
+
+  + Check that existing binaries are valid before exporting variable
+
+ -- Boni Garcia <boni.gg@gmail.com>  Sat, 07 Nov 2015 18:03:00 +0200
+
+
 webdrivermanager (1.3.0)
 
   + Support for Microsoft Edge
